--- a/styles/home.css
+++ b/styles/home.css
@@ -1,11 +1,12 @@
 .home {
   text-align: center;
+  padding: 0 0 70px 0;
  }
 
 .home-title {
   font-size: 45px;
   font-weight: 700;
-  color: var(--color-main-black);
+  
   margin: 45px 0 25px 0;
  }
 
