--- a/index.css
+++ b/index.css
@@ -4,4 +4,5 @@
 @import url(styles/home.css);
 @import url(styles/about.css);
 @import url(styles/history.css);
+@import url(styles/portfolio.css);
 
