--- a/index.css
+++ b/index.css
@@ -5,4 +5,5 @@
 @import url(styles/about.css);
 @import url(styles/history.css);
 @import url(styles/portfolio.css);
+@import url(styles/contacts.css);
 
